--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
       <!--  -->
       <!--  -->
-      <!-- Social icons commented out until we get proper links  -->
+      <!-- Social icons commented out until we get URIs  -->
       <!--  -->
       <!-- <div class="col-md-4 col-md-offset-2 text-right">
         <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -116,10 +116,14 @@
   <div class="row">
     <div class="col-xs-10 col-xs-offset-2">
       <ul class="nav nav-tabs">
-        <li class="active"><a id="step_one" data-toggle="tab" href="#step1">Form</a></li>
-        <li><a id="step_two" data-toggle="tab" href="#step2">Commands</a></li>
-        <li><a id="step_three" data-toggle="tab" href="#step3">Progress</a></li>
-        <li><a id="step_four" data-toggle="tab" href="#step4">Success</a></li>
+        <li class="active"><a id="step_one" data-toggle="tab" href="#step1"></a>Initial proposal form</li>
+
+        <li><a id="step_two" data-toggle="tab" href="#step2"></a>Generated wallet commands</li>
+
+        <li><a id="step_three" data-toggle="tab" href="#step3"></a>Awaiting confirmations...</li>
+
+        <li><a id="step_four" data-toggle="tab" href="#step4"></a>Completed proposal code</li>
+
       </ul>
     </div>
   </div>
