--- a/index.html
+++ b/index.html
@@ -68,6 +68,29 @@
             $('#mainnet').change(function() { gov = init('mainnet', mainnetProvider); });
             $('#testnet').change(function() { gov = init('testnet', testnetProvider); });
 
+            $('#start_epoch').change(function() {
+                paymentCycle.selectedStartIndex = $('#start_epoch').find(':selected').data('index');
+                paymentCycle.updateEndEpoch();
+            });
+
+            $('#end_epoch').change(function() {
+                paymentCycle.selectedPeriods = $('#end_epoch').find(':selected').data('index');
+
+                var payment_amount = parseInt($('#payment_amount').val());
+                var periods = parseInt(paymentCycle.selectedPeriods+1);
+
+                $('#total_amount').text(payment_amount * periods);
+            });
+
+            $('#payment_amount').change(function() {
+                paymentCycle.selectedPeriods = $('#end_epoch').find(':selected').data('index');
+                
+                var payment_amount = parseInt($('#payment_amount').val());
+                var periods = parseInt(paymentCycle.selectedPeriods+1);
+
+                $('#total_amount').text(payment_amount * periods);
+            });
+
             $("#time").val(Math.floor((new Date).getTime() / 1000));
 
             $('#prepareProposal').click(function() {
@@ -242,7 +265,7 @@
                 <div class="row" id="createProposalHeader">
                     <div class="col-xs-12">
                         <h1 class="removeMargin">Create a Proposal</h1>
-                        <h5 class="header_description">Enter details for your proposal and click 'Create Proposal'.  This will generate a command you can run in your local wallet to prepare the proposal at a cost of 0.33 Dash</h5>
+                        <h5 class="header_description">Enter details for your proposal and click 'Create Proposal'.  This will generate a command you can run in your local wallet to prepare the proposal at a cost of 0.33 DASH</h5>
                     </div>
                 </div>
 
@@ -263,7 +286,7 @@
                   <div class="row">
                     <div class="col-xs-3">
                       <div class="form-group">
-                          <label for="start_epoch">Start Date:</label>
+                          <label for="start_epoch">First Payment:</label>
                           <select name="start_epoch" class="form-control" id="start_epoch"></select>
                       </div>
                     </div>
@@ -275,7 +298,7 @@
                       <!--  -->
                       <!-- The following form group is a placeholder for proposal end time. Please change to the correct id. -->
                       <div class="form-group">
-                          <label for="start_epoch">Number of Payments:</label>
+                          <label for="start_epoch">Last Payment:</label>
                           <select name="start_epoch" class="form-control" id="end_epoch"></select>
                       </div>
                       <!--  -->
@@ -293,7 +316,7 @@
                   <div class="row">
                     <div class="col-xs-7">
                       <div class="form-group">
-                          <label for="payment_amount">Monthly Payment Amount in Dash:</label>
+                          <label for="payment_amount">Payment Amount:</label>
                           <input type="text" class="form-control" id="payment_amount" value="" placeholder="0">
                       </div>
                     </div>
@@ -307,6 +330,15 @@
                       </div>
                     </div>
                   </div>
+
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="form-group">
+                                <label for="total_amount">Total Amount: </label>
+                                <span id="total_amount">0</span> <span>DASH</span>
+                            </div>
+                        </div>
+                    </div>
 
                   <div class="form-group" style="display:none;">
                       <label for="type">type:</label>
@@ -358,7 +390,7 @@
 
                         <div class="form-group">
                             <label for="prepareProposal">Prepare-Proposal Command:</label>
-                            <div>Paste this proposal command into your Dash wallet console to spend a Fee transaction of 0.33 DASH.</div>
+                            <div>Paste this proposal command into your wallet console to spend a Fee transaction of 0.33 DASH.</div>
                             <textarea readonly class="form-control" id="prepareProposal" rows="4" placeholder=""></textarea>
                         </div>
 
