--- a/index.html
+++ b/index.html
@@ -65,9 +65,14 @@
             paymentCycle.selectedPeriods = $('#end_epoch').find(':selected').data('index');
 
             var payment_amount = parseInt($('#payment_amount').val());
+            if (isNaN(payment_amount)) payment_amount = 0;
+            
             var periods = parseInt((paymentCycle.selectedPeriods+1)-paymentCycle.selectedStartIndex);
 
+            var label = $('#end_epoch').find(':selected').data('label');
+
             $('#total_amount').text(payment_amount * periods);
+            $('#total_amount_due').text(" with a final payment on " + label);
         };
 
         $(document).ready(function() {
@@ -299,7 +304,7 @@
                       <!--  -->
                       <!-- The following form group is a placeholder for proposal end time. Please change to the correct id. -->
                       <div class="form-group">
-                          <label for="start_epoch">Last Payment:</label>
+                          <label for="start_epoch">Payments:</label>
                           <select name="start_epoch" class="form-control" id="end_epoch"></select>
                       </div>
                       <!--  -->
@@ -336,7 +341,7 @@
                         <div class="col-xs-12">
                             <div class="form-group">
                                 <label for="total_amount">Total Amount: </label>
-                                <span id="total_amount">0</span> <span>DASH</span>
+                                <span id="total_amount">0</span> <span>DASH</span> <span id="total_amount_due"></span>
                             </div>
                         </div>
                     </div>
