--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
         </div>
       </div>
       <ul class="nav nav-pills">
-        <li class="active"><a id="step_one" data-toggle="tab" href="#step1">Form</a></li>
-        <li><a id="step_two" data-toggle="tab" href="#step2">Commands</a></li>
-        <li><a id="step_three" data-toggle="tab" href="#step3">Progress</a></li>
-        <li><a id="step_four" data-toggle="tab" href="#step4">Complete</a></li>
+        <li class="active"><a id="step_one" data-toggle="tab" href="#step1">Create a Proposal</a></li>
+        <li><a id="step_two" data-toggle="tab" href="#step2">Wallet Commands</a></li>
+        <li><a id="step_three" data-toggle="tab" href="#step3">Confirm Transaction</a></li>
+        <li><a id="step_four" data-toggle="tab" href="#step4">Submit Proposal</a></li>
       </ul>
     </div>
   </div>
@@ -292,7 +292,7 @@
                   <div class="row">
                     <div class="col-xs-3">
                       <div class="form-group">
-                          <label for="start_epoch">First Payment:</label>
+                          <label for="start_epoch">Voting Deadline:</label>
                           <select name="start_epoch" class="form-control" id="start_epoch"></select>
                       </div>
                     </div>
