--- a/index.html
+++ b/index.html
@@ -162,9 +162,13 @@
                       if(err == 404) {
                         $('#feeTxid').addClass('validationError');
                         $('#feeTxid').val('Transaction ID not found');
+                        $('#error_modal').modal('show');
+                        $('#error_text').text('Proposal transaction ID not found');
                       } else if (err == 400) {
                         $('#feeTxid').addClass('validationError');
                         $('#feeTxid').val('Please paste a valid transaction ID');
+                        $('#error_modal').modal('show');
+                        $('#error_text').text('Please paste a valid transaction ID');
                       }
 
                     }
@@ -202,22 +206,33 @@
 </head>
 <body>
 
+  <div class="modal fade" id="error_modal" tabindex="-1" role="dialog" aria-labelledby="gridSystemModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="gridSystemModalLabel">Error</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-xs-offset-4 col-xs-8">
+            <div id="error_text">
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 <div class="container-fluid">
   <div class="row" id="header">
       <div class="col-md-2">
         <img src="images/dash_logo.png" alt="dash governance tools">
-      </div>
-      <div class="col-md-4">
-
-          <div id="network_toggle" class="btn-group" data-toggle="buttons">
-              <label class="btn btn-primary">
-                  <input type="radio" name="options" id="mainnet" autocomplete="off"> Mainnet
-              </label>
-              <label class="btn btn-primary active">
-                  <input type="radio" name="options" id="testnet" autocomplete="off" checked> Testnet
-              </label>
-          </div>
-
       </div>
       <!--  -->
       <!--  -->
@@ -266,6 +281,18 @@
       <div class="tab-content">
         <div id="step1" class="tab-pane fade in active">
           <div class="proposalBlock createProposal">
+            <div class="row">
+              <div class="col-xs-offset-8 col-xs-4">
+                <div id="network_toggle" class="btn-group" data-toggle="buttons">
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="mainnet" autocomplete="off"> Mainnet
+                    </label>
+                    <label class="btn btn-primary active">
+                        <input type="radio" name="options" id="testnet" autocomplete="off" checked> Testnet
+                    </label>
+                </div>
+              </div>
+            </div>
             <div class="row">
               <div class="col-xs-12">
                 <div class="row" id="createProposalHeader">
