--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             var payment_amount = parseInt($('#payment_amount').val());
             if (isNaN(payment_amount)) payment_amount = 0;
-            
+
             var periods = parseInt((paymentCycle.selectedPeriods+1)-paymentCycle.selectedStartIndex);
 
             var label = $('#end_epoch').find(':selected').data('label');
@@ -232,7 +232,12 @@
 <div class="container-fluid">
   <div class="row" id="header">
       <div class="col-md-2">
-        <img src="images/dash_logo.png" alt="dash governance tools">
+        <img id="dash_logo" src="images/dash_logo.png" alt="dash governance tools">
+        <div class="row">
+          <div class="col-xs-12">
+            <h4><i>Governance Tools</i></h4>
+          </div>
+        </div>
       </div>
       <!--  -->
       <!--  -->
